--- a/Automation/Automation.App/Views/Menus/SideMenu.xaml
+++ b/Automation/Automation.App/Views/Menus/SideMenu.xaml
@@ -24,6 +24,19 @@
             MinWidth="200"
             ItemsSource="{Binding RootScope.Childrens}"
             SelectedItemChanged="TreeView_SelectedItemChanged">
+            <TreeView.ItemContainerStyle>
+                <Style TargetType="{x:Type TreeViewItem}" BasedOn="{StaticResource TreeViewItemStyle}">
+                    <Setter Property="IsSelected" Value="{Binding IsSelected, Mode=TwoWay}" />
+                    <Setter Property="IsExpanded">
+                        <Setter.Value>
+                            <!--  Avoids warnings for nodes that do not have the "IsExpanded" property  -->
+                            <PriorityBinding>
+                                <Binding Path="IsExpanded" Mode="TwoWay" />
+                            </PriorityBinding>
+                        </Setter.Value>
+                    </Setter>
+                </Style>
+            </TreeView.ItemContainerStyle>
             <TreeView.Resources>
                 <HierarchicalDataTemplate DataType="{x:Type scopes:Scope}" ItemsSource="{Binding Childrens}">
                     <StackPanel Orientation="Horizontal">
