--- a/Automation/Automation.App/Components/NodeSelector.xaml
+++ b/Automation/Automation.App/Components/NodeSelector.xaml
@@ -1,17 +1,17 @@
 ﻿<UserControl
-    x:Class="Automation.App.Components.ScopedElementSelector"
+    x:Class="Automation.App.Components.NodeSelector"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:local="clr-namespace:Automation.App.Components"
     xmlns:components="clr-namespace:Automation.App.Components"
-    xmlns:scopes="clr-namespace:Automation.App.ViewModels.Scopes"
+    xmlns:scopes="clr-namespace:Automation.Base;assembly=Automation.Base"
     xmlns:adonisUi="clr-namespace:AdonisUI;assembly=AdonisUI"
     mc:Ignorable="d"
-    d:DataContext="{d:DesignInstance local:ScopedElementSelector}">
+    d:DataContext="{d:DesignInstance local:NodeSelector}">
     <TreeView
-        DataContext="{Binding RelativeSource={RelativeSource AncestorType={x:Type local:ScopedElementSelector}}}"
+        DataContext="{Binding RelativeSource={RelativeSource AncestorType={x:Type local:NodeSelector}}}"
         Background="{DynamicResource {x:Static adonisUi:Brushes.Layer1BackgroundBrush}}"
         MinWidth="200"
         ItemsSource="{Binding RootScope.Childrens}"
