--- a/Automation/Automation.App/Components/NodeIcon.xaml
+++ b/Automation/Automation.App/Components/NodeIcon.xaml
@@ -1,16 +1,16 @@
 ﻿<UserControl
-    x:Class="Automation.App.Components.ScopedElementIcon"
+    x:Class="Automation.App.Components.NodeIcon"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:local="clr-namespace:Automation.App.Components"
     mc:Ignorable="d"
-    d:DataContext="{d:DesignInstance local:ScopedElementIcon}">
+    d:DataContext="{d:DesignInstance local:NodeIcon}">
     <TextBlock
         FontFamily="{StaticResource FontAwesomeSolid}"
         VerticalAlignment="Center"
-        DataContext="{Binding Type, RelativeSource={RelativeSource AncestorType=local:ScopedElementIcon}}">
+        DataContext="{Binding Type, RelativeSource={RelativeSource AncestorType=local:NodeIcon}}">
         <TextBlock.Style>
             <Style TargetType="TextBlock">
                 <Style.Triggers>
