--- a/Automation/Automation.App/Views/Modal.xaml
+++ b/Automation/Automation.App/Views/Modal.xaml
@@ -5,9 +5,11 @@
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:local="clr-namespace:Automation.App.Views"
+    xmlns:base="clr-namespace:Automation.App.Base"
     xmlns:adonisUi="clr-namespace:AdonisUI;assembly=AdonisUI"
     mc:Ignorable="d"
-    Visibility="Collapsed">
+    Visibility="Collapsed"
+    d:DataContext="{d:DesignInstance base:ModalOptions}">
     <Grid>
         <Border
             Background="{DynamicResource {x:Static adonisUi:Brushes.Layer0BackgroundBrush}}"
@@ -24,6 +26,7 @@
                 <Grid.RowDefinitions>
                     <RowDefinition Height="auto" />
                     <RowDefinition />
+                    <RowDefinition Height="auto" />
                 </Grid.RowDefinitions>
 
                 <Grid>
@@ -35,8 +38,8 @@
                     <TextBlock
                         Margin="6,0"
                         VerticalAlignment="Center"
-                        x:Name="ModalTitle"
-                        FontWeight="Bold" />
+                        FontWeight="Bold"
+                        Text="{Binding Title}" />
                     <Button
                         Grid.Column="1"
                         Background="Transparent"
@@ -48,6 +51,32 @@
                         Click="ButtonClose" />
                 </Grid>
                 <ContentPresenter x:Name="ContentContainer" Grid.Row="1" />
+
+                <StackPanel
+                    Orientation="Horizontal"
+                    Grid.Row="2"
+                    Margin="2"
+                    HorizontalAlignment="Right">
+                    <StackPanel.Style>
+                        <Style TargetType="StackPanel">
+                            <Style.Triggers>
+                                <DataTrigger Binding="{Binding ShowFooter}" Value="False">
+                                    <Setter Property="Visibility" Value="Collapsed" />
+                                </DataTrigger>
+                            </Style.Triggers>
+                        </Style>
+                    </StackPanel.Style>
+                    <Button
+                        Grid.Column="0"
+                        Margin="2,0"
+                        Click="ButtonClose">
+                        Cancel
+                    </Button>
+                    <Button
+                        Grid.Column="1"
+                        Click="ButtonValidate_Click"
+                        Content="{Binding ValidButtonText}" />
+                </StackPanel>
             </Grid>
         </Border>
     </Grid>
