--- a/Automation/Automation.App/MainWindow.xaml
+++ b/Automation/Automation.App/MainWindow.xaml
@@ -5,7 +5,7 @@
     xmlns:adonisControls="clr-namespace:AdonisUI.Controls;assembly=AdonisUI"
     xmlns:adonisUi="clr-namespace:AdonisUI;assembly=AdonisUI"
     xmlns:adonisExtensions="clr-namespace:AdonisUI.Extensions;assembly=AdonisUI"
-    xmlns:components="clr-namespace:Automation.App.Base.Components"
+    xmlns:components="clr-namespace:Automation.App.Components"
     xmlns:local="clr-namespace:Automation.App"
     xmlns:views="clr-namespace:Automation.App.Views"
     xmlns:menus="clr-namespace:Automation.App.Views.Menus"
@@ -28,8 +28,8 @@
                     <ColumnDefinition Width="auto" />
                     <ColumnDefinition />
                 </Grid.ColumnDefinitions>
-                <menus:SideMenu />
-                <views:RouterView Grid.Column="1" />
+                <components:NodeSelector x:Name="SideMenu" />
+                <views:RouterView Grid.Column="1" Selected="{Binding Selected, ElementName=SideMenu, Mode=OneWay}" />
             </Grid>
             <menus:Footer Grid.Row="2" />
         </Grid>
